Final Commit, layout presented, debug comments added. sticky footer

--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="wrapper">
+        <header class="m-top">
+        </header>
+        <div class="main_slide m-top">
+        </div>
+        <main class="m-top clearfix">
+            <div class="d-head"></div>
+            <div class="d-side"></div>
+            <div class="d-main"></div>
+            <div class="d-side"></div>
+        </main>
+        <footer>
+        </footer>
+    </div>
 </body>
 </html>
